BlankText UMAs should be reported only for webfonts in block period

This fixes a bug where WebFont.HadBlankText and
WebFont.BlankTextShownTime are reported incorrectly when the webfont
falls back immediately, because of font-display:swap or the webfont
intervention.

BUG=591304

Review URL: https://codereview.chromium.org/1764913003

Cr-Commit-Position: refs/heads/master@{#379246}

Former-commit-id: 802475025dd1465c1f6f99b114d9b9ac7a37e110